--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
       <link rel="stylesheet" href="node_modules/@fortawesome/fontawesome-free/css/all.css">
       <link rel="stylesheet" href="node_modules/@fortawesome/fontawesome-free/css/v4-shims.min.css">
+      <link rel="stylesheet" href="node_modules/leaflet/dist/leaflet.css">
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Raytor LTD</title>
   </head>
@@ -14,5 +15,6 @@
     <script src="node_modules/@fortawesome/fontawesome-free/js/all.min.js"></script>
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+    <script src="node_modules/leaflet/dist/leaflet.js"></script>
   </body>
 </html>
