--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
       <link rel="stylesheet" href="node_modules/@fortawesome/fontawesome-free/css/all.css">
       <link rel="stylesheet" href="node_modules/@fortawesome/fontawesome-free/css/v4-shims.min.css">
       <link rel="stylesheet" href="node_modules/leaflet/dist/leaflet.css">
+      <link href="https://cdn.jsdelivr.net/gh/yesiamrocks/cssanimation.io@1.0.3/cssanimation.min.css" rel="stylesheet">
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Raytor LTD</title>
   </head>
@@ -16,5 +17,6 @@
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
     <script src="node_modules/leaflet/dist/leaflet.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/gh/yesiamrocks/cssanimation.io@1.0.3/letteranimation.min.js"></script>
   </body>
 </html>
