--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
       <link rel="stylesheet" href="node_modules/@fortawesome/fontawesome-free/css/all.css">
       <link rel="stylesheet" href="node_modules/@fortawesome/fontawesome-free/css/v4-shims.min.css">
       <link rel="stylesheet" href="node_modules/leaflet/dist/leaflet.css">
+      <link href="https://cdn.jsdelivr.net/npm/@mdi/font@5.x/css/materialdesignicons.min.css" rel="stylesheet">
       <link href="https://cdn.jsdelivr.net/gh/yesiamrocks/cssanimation.io@1.0.3/cssanimation.min.css" rel="stylesheet">
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Raytor LTD</title>
