--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
-    <script src="node_modules/@fortawesome/fontawesome-free/js/all.min.js"></script>
+    <script type="module" src="node_modules/@fortawesome/fontawesome-free/js/all.js"></script>
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
-    <script src="node_modules/leaflet/dist/leaflet.js"></script>
+    <script type="module" src="node_modules/leaflet/dist/leaflet.js"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/gh/yesiamrocks/cssanimation.io@1.0.3/letteranimation.min.js"></script>
   </body>
 </html>
