--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <link href="https://cdn.jsdelivr.net/npm/@mdi/font@5.x/css/materialdesignicons.min.css" rel="stylesheet">
       <link href="https://cdn.jsdelivr.net/gh/yesiamrocks/cssanimation.io@1.0.3/cssanimation.min.css" rel="stylesheet">
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Raytor LTD</title>
+    <title>Reitor LTD</title>
   </head>
   <body>
     <div id="app"></div>
